nueva rama con el agregado de javascript

--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
         <!-- LOGO -->
         <a href="#" class="logo">Germán Pequera</a>
 
-        <!-- Truco para que el boton del menu sea clickeable sin usar JAVASCRIPT -->
-        <input type="checkbox" name="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="menu-icon-action">
-            <div class='bx bx-menu' id="menu-icon"></div>
-        </label>
+        <div class='bx bx-menu' id="menu-icon"></div>
+
 
         <ul class="navlist">
             <li><a href="#">Home</a></li>
@@ -73,6 +70,9 @@
             <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
         </div>
 
-    
+        //Script de Scroll reveal
+        <script src="https://unpkg.com/scrollreveal"></script>
+        
+        <script src="script.js"></script>
 </body>
 </html>
